--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 html,
 body,
 h1,
+h2,
 ul,
 li {
     margin: 0;
@@ -32,6 +33,9 @@ a {
 
 /* header */
 .top-container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     background-color: #61c9a4;
     color: #ffffff;
@@ -62,10 +66,47 @@ a {
 
 /* pages */
 .page {
-    padding-top: 2em;
+    min-height: 100em;
+    padding-top: 4em;
     text-align: justify;
 }
 
 .page ul {
     margin-left: 2em;
+}
+
+.page h2 {
+    font-size: 3em;
+    margin-bottom: 1em;
+    text-align: center;
+}
+.item-container {
+    margin-bottom: 2em;
+}
+
+.item-container img {
+    border: 5px solid #61c9a4;
+    border-radius: 5px;
+    vertical-align: top;
+}
+
+.item-container h3 {
+    font-size: 2em;
+    text-align: center;
+}
+
+.item-container a {
+    background: #65caa6;
+    color: #f9fffd;
+}
+
+.item-container a:hover {
+    text-decoration: none;
+    background: #1a1a1a;
+}
+
+.item-container .item {
+    display: inline-block;
+    margin-left: 2em;
+    max-width: 30em;
 }
