--- a/app/styl/common.styl
+++ b/app/styl/common.styl
@@ -3,6 +3,7 @@ body
 header
 h1
 h2
+h3
 ul
 li
     box-sizing border-box
@@ -15,6 +16,3 @@ body
     font-family 'Open Sans', Helvetica, sans-serif
     font-size 16px
     line-height 1.25em
-
-a
-    text-decoration none
