--- a/app/styl/navigation.styl
+++ b/app/styl/navigation.styl
@@ -12,9 +12,9 @@
     position relative
 
 .navigation__header
-    font-weight: normal;
-    font-size: 2em;
-    line-height: 1.5em;
+    font-weight normal
+    font-size 2em
+    line-height 1.5em
 
 .navigation__menu
     position absolute
