Migrate to jade (part 2)

--- a/app/styl/project.styl
+++ b/app/styl/project.styl
@@ -24,3 +24,7 @@
     &:hover
         text-decoration none
         background #1a1a1a
+
+.project__description
+    font-weight bold
+    margin-bottom 0.5em
