Migrate to jade (part 3)

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -3,3 +3,5 @@ extends ./partials/layout.jade
 block content
     include ./about.jade
     include ./projects.jade
+    include ./experiments.jade
+    include ./contacts.jade
