--- a/app/templates/partials/layout.jade
+++ b/app/templates/partials/layout.jade
@@ -9,5 +9,6 @@ html(lang="en")
 
     body
         include ./navigation.jade
-
         block content
+        include ./metrika.jade
+        script(src="script.js")
