Use separate pages

--- a/app/templates/contacts.jade
+++ b/app/templates/contacts.jade
@@ -1,6 +1,9 @@
-div#contacts.page
-    h2.page__header My contacts and links on profiles
+extends ./partials/layout.jade
 
+block page-header
+    | My contacts and links on profiles
+
+block page-content
     h3.list__header Contacts:
     ul.list
         li
