--- a/app/templates/experiments.jade
+++ b/app/templates/experiments.jade
@@ -1,6 +1,9 @@
-div#experiments.page
-    h2.page__header My experiments with new technologies
+extends ./partials/layout.jade
 
+block page-header
+    | My experiments with new technologies
+
+block page-content
     ul.list
         - for (var i = 0; i < experiments.length; i++)
             - var item = experiments[i]
