--- a/app/templates/partials/metrika.jade
+++ b/app/templates/partials/metrika.jade
@@ -7,3 +7,6 @@ script(type='text/javascript').
         s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
         if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); }
     })(document, window, "yandex_metrika_callbacks");
+noscript
+    div
+        img(src="//mc.yandex.ru/watch/23218936", style="position:absolute; left:-9999px;" alt="")
