--- a/app/templates/contacts.jade
+++ b/app/templates/contacts.jade
@@ -1,7 +1,8 @@
 extends ./partials/layout.jade
 
-block page-header
-    | My contacts and links on profiles
+block vars
+    - var page = 'contacts'
+    - var pageHeader = 'My contacts and links on profiles'
 
 block page-content
     h3.list__header Contacts:
