Add CV (part 1)

--- a/app/styl/page.styl
+++ b/app/styl/page.styl
@@ -1,5 +1,5 @@
 .page
-    width 940px
+    width 800px
     margin 0 auto
     padding 6em 0 4em
     text-align justify
@@ -8,3 +8,4 @@
     font-size 3em
     margin-bottom 1em
     text-align center
+    line-height 1
