--- a/app/templates/contacts.jade
+++ b/app/templates/contacts.jade
@@ -15,7 +15,7 @@ block page-content
     h3.list__header Job:
     ul.list
         li
-            a.list__link(href="https://github.com/igorzoriy") Github
+            a.list__link(href="https://github.com/igorzoriy") GitHub
         li
             a.list__link(href="http://www.linkedin.com/in/igorzoriy") LinkedIn
         li
