--- a/app/styl/resume.styl
+++ b/app/styl/resume.styl
@@ -1,28 +1,28 @@
-.cv__section
+.resume__section
     margin 1em 0 2em
 
-.cv_header
+.resume_header
     text-transform uppercase
     font-weight normal
     font-size 24px
     margin 0.5em 1em
 
-.cv__table
+.resume__table
     width 100%
     border-collapse collapse
 
-.cv__table-row
+.resume__table-row
     border-bottom 1px solid #61c9a4
 
     &:last-child
         border-bottom none
 
-.cv__table-name-col
+.resume__table-name-col
     width 35%
     padding 0.5em
 
-.cv__table-value-col
+.resume__table-value-col
     padding 0.5em
 
-.cv__link
+.resume__link
     text-decoration none
