--- a/app/templates/partials/navigation.jade
+++ b/app/templates/partials/navigation.jade
@@ -3,7 +3,7 @@ header.navigation
         h1.navigation__header Igor Zoriy: Web Developer
         div.navigation__menu
             a.navigation__menu-link(class="#{page == 'about' ? 'active' : ''}", href="index.html") About me
-            a.navigation__menu-link(class="#{page == 'cv' ? 'active' : ''}", href="cv.html") CV
+            a.navigation__menu-link(class="#{page == 'resume' ? 'active' : ''}", href="resume.html") Resume
             a.navigation__menu-link(class="#{page == 'projects' ? 'active' : ''}", href="projects.html") Projects
             a.navigation__menu-link(class="#{page == 'experiments' ? 'active' : ''}", href="experiments.html") Experiments
             a.navigation__menu-link(class="#{page == 'contacts' ? 'active' : ''}", href="contacts.html") Contacts and Profiles
