- add clean  task - add images task - small style fixes

--- a/app/templates/experiments.jade
+++ b/app/templates/experiments.jade
@@ -2,7 +2,7 @@ extends ./partials/layout.jade
 
 block vars
     - var page = 'experiments'
-    - var pageHeader = 'My experiments with new technologies'
+    - var pageHeader = 'My experiments and small projects'
 
 block page-content
     ul.list
