Update styles for links

--- a/app/styl/list.styl
+++ b/app/styl/list.styl
@@ -1,3 +1,5 @@
+@import 'vars.styl'
+
 .list
     margin 0 0 1em 2em
     line-height 1.5
@@ -7,4 +9,5 @@
     margin-bottom 0.5em
 
 .list__link
+    color link-color
     text-decoration none
