--- a/app/styl/resume.styl
+++ b/app/styl/resume.styl
@@ -1,3 +1,5 @@
+@import 'vars.styl'
+
 .resume__section
     margin 1em 0 2em
 
@@ -25,4 +27,8 @@
     padding 0.5em
 
 .resume__link
+    color link-color
     text-decoration none
+
+    &:hover
+        text-decoration underline
