Add skills section to resume

--- a/app/styl/resume.styl
+++ b/app/styl/resume.styl
@@ -21,10 +21,18 @@
 
 .resume__table-name-col
     width 35%
-    padding 0.5em
+    padding resume-table-padding
 
 .resume__table-value-col
-    padding 0.5em
+    padding resume-table-padding
+
+.resume__table-header-col
+    padding resume-table-padding
+    font-weight normal
+    text-transform uppercase
+
+.resume__table-skill-col
+    padding resume-table-padding
 
 .resume__link
     color link-color
