--- a/app/templates/resume.jade
+++ b/app/templates/resume.jade
@@ -3,6 +3,7 @@ extends ./partials/layout.jade
 block vars
     - var page = 'resume'
     - var pageHeader = 'Resume'
+    - var pdfLink = true
 
 block page-content
     section.resume__section
