--- a/app/styl/page.styl
+++ b/app/styl/page.styl
@@ -1,3 +1,5 @@
+@import 'vars.styl'
+
 .page
     width 800px
     margin 0 auto
@@ -9,3 +11,17 @@
     margin-bottom 1em
     text-align center
     line-height 1
+    position relative
+
+.page__header-resume
+    position absolute
+    right 0
+    top 50%
+    margin-top -0.15em
+    font-size 0.3em
+    text-transform uppercase
+    color link-color
+    text-decoration none
+
+    &:hover
+        text-decoration underline
