--- a/app/templates/partials/layout.jade
+++ b/app/templates/partials/layout.jade
@@ -1,21 +1,13 @@
-doctype html
-html(lang="en")
-    block vars
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=Edge,chrome=1")
-        title IgorZoriy.com
-        link(href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800", rel="stylesheet", type="text/css")
-        link(href="styles.css", rel="stylesheet", type="text/css", media="all")
+block vars
 
-    body
-        include ./navigation.jade
+include ./header.jade
 
-        div.page
+body
+    include ./navigation.jade
+    div.page
+        block page-header
             h2.page__header
                 =pageHeader
-                - if (typeof pdfLink != 'undefined')
-                    a.page__header-resume(href="resume.pdf") download pdf
-            block page-content
+        block page-content
 
-        include ./metrika.jade
+    include ./metrika.jade
