--- a/app/templates/resume.jade
+++ b/app/templates/resume.jade
@@ -2,8 +2,11 @@ extends ./partials/layout.jade
 
 block vars
     - var page = 'resume'
-    - var pageHeader = 'Resume'
-    - var pdfLink = true
+
+block page-header
+    h2.page__header Resume
+        - if (!isPDF)
+            a.page__header-resume(href="resume.pdf") download pdf
 
 block page-content
     section.resume__section
