Add inline styles for html for PDF

--- a/app/templates/partials/layout.jade
+++ b/app/templates/partials/layout.jade
@@ -5,10 +5,12 @@ html(lang="en")
     include ./header.jade
 
     body
-        include ./navigation.jade
+        if !isPDF
+            include ./navigation.jade
         div.page
             block page-header
                 h2.page__header
                     =pageHeader
             block page-content
-        include ./metrika.jade
+        if !isPDF
+            include ./metrika.jade
