--- a/app/templates/partials/header.jade
+++ b/app/templates/partials/header.jade
@@ -2,5 +2,6 @@ head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=Edge,chrome=1")
     title IgorZoriy.com
-    link(href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800", rel="stylesheet", type="text/css")
+    if !isPDF
+        link(href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800", rel="stylesheet", type="text/css")
     link(href="styles.css", rel="stylesheet", type="text/css", media="all")
