--- a/app/index.jade
+++ b/app/index.jade
@@ -28,6 +28,9 @@ html(lang="en")
             h3.section-header Pet projects
             ul.list
                 li
+                    a.list-link(href="https://github.com/igorzoriy/learn-words") Learn Words
+                    |&nbsp;-&nbsp;WebApp for learning new words (Redux, React, ES6, Webpack, Mocha).
+                li
                     a.list-link(href="https://github.com/igorzoriy/atom-git-status") Atom Git Status
                     |&nbsp;-&nbsp;Atom plugin for showing current git status of project (Atom&nbsp;API, Babel, ES6).
                 li
