Add telegram to contact info

--- a/app/index.jade
+++ b/app/index.jade
@@ -19,12 +19,12 @@ html(lang="en")
                 li
                     a.list-link(href="http://www.linkedin.com/in/igorzoriy") LinkedIn
                 li
-                    a.list-link(href="https://twitter.com/igor_zoriy") Twitter
-                li
                     a.list-link(href="https://www.facebook.com/igor.zoriy") Facebook
                 li
+                    a.list-link(href="https://t.me/igor_zoriy") Telegram
+                li
                     a.list-link(href="skype:igor.zoriy?add") Skype
-            
+
             h3.section-header Pet projects
             ul.list
                 li
