Use parcel bundler instead of gulp

--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible", content="IE=Edge,chrome=1")
-        link(href="styles.css", rel="stylesheet", type="text/css", media="all")
+        link(href="styles.styl", rel="stylesheet", type="text/css", media="all")
         title Igor Zoriy - Frontend Developer
 
     body
