--- a/index.pug
+++ b/index.pug
@@ -12,6 +12,10 @@ html(lang="en")
             h2.page-subheader Frontend/JavaScript Developer
             h2.page-subheader Novi Sad, Serbia
 
+            div.resume (
+                a(href="resume.pdf") my resume
+                |)
+
             h3.section-header Contacts
             ul.list
                 li
