--- a/styles.styl
+++ b/styles.styl
@@ -8,7 +8,7 @@ body
 .page
     width 800px
     margin 0 auto
-    padding 6em 0 4em
+    padding 4em 0
 
 .page-header
     font-size 3em
@@ -22,6 +22,15 @@ body
     text-align center
     margin 0.3em 0
     line-height 1
+
+.resume
+    text-align: center
+    font-size: 1.5em
+    margin: 0.6em 0
+
+.resume a
+    color #5f69ee
+    text-decoration none
 
 .section-header
     font-size 1.25em
