--- a/index.pug
+++ b/index.pug
@@ -32,8 +32,11 @@ html(lang="en")
             h3.section-header Pet projects
             ul.list
                 li
+                    a.list-link(href="https://github.com/igorzoriy/feed-my-telegram") Feed My Telegram
+                    |&nbsp;-&nbsp;Service for translating updates from RSS/Twitter (TypeScript, Node.js).
+                li
                     a.list-link(href="https://github.com/igorzoriy/learn-words") Learn Words
-                    |&nbsp;-&nbsp;WebApp for learning new words (Redux, React, ES6, Webpack, Mocha).
+                    |&nbsp;-&nbsp;WebApp for learning new words (TypeScript, Redux, React, Webpack, Jest).
                 li
                     a.list-link(href="https://github.com/igorzoriy/atom-git-status") Atom Git Status
                     |&nbsp;-&nbsp;Atom plugin for showing current git status of project (Atom&nbsp;API, Babel, ES6).
@@ -42,7 +45,7 @@ html(lang="en")
                     |&nbsp;-&nbsp;Gulp plugin for export HTML to PDF (Node streams).
                 li
                     a.list-link(href="https://github.com/igorzoriy/grunt-backup") Grunt Backup
-                    |&nbsp;-&nbsp;Grunt plugin for making backups (Node, NodeUnit).
+                    |&nbsp;-&nbsp;Grunt plugin for making backups (Node.js, NodeUnit).
                 li
                     a.list-link(href="https://github.com/igorzoriy/snake-canvas") Snake on HTML 5 Canvas
                     |&nbsp;-&nbsp;Small and simple game on Pure JS (Canvas, QUnit).
@@ -60,4 +63,8 @@ html(lang="en")
                     if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); }
             })(document, window, "yandex_metrika_callbacks");
         noscript
-            img(src="//mc.yandex.ru/watch/23218936", style="position:absolute; left:-9999px;" alt="")
+            img(
+                src="//mc.yandex.ru/watch/23218936"
+                style="position:absolute; left:-9999px;"
+                alt=""
+            )
