--- a/index.pug
+++ b/index.pug
@@ -2,26 +2,23 @@ doctype html
 html(lang="en")
     head
         meta(charset="utf-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=Edge,chrome=1")
+        meta(http-equiv="X-UA-Compatible", content="IE=Edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1")
+        meta(name="description", content="Igor Zoriy - Frontend Developer, JavaScript/TypeScript Programmer")
         link(href="styles.styl", rel="stylesheet", type="text/css", media="all")
-        title Igor Zoriy - Frontend Developer
+        title Igor Zoriy - Frontend Developer, JavaScript/TypeScript Programmer
 
     body
         div.page
             h1.page-header Igor Zoriy
-            h2.page-subheader Frontend/JavaScript Developer
-            h2.page-subheader Novi Sad, Serbia
-
-            div.resume (
-                a(href="resume.pdf") my resume
-                |)
+            h2.page-subheader Frontend Developer
 
             h3.section-header Contacts
             ul.list
                 li
-                    a.list-link(href="https://github.com/igorzoriy") GitHub
-                li
                     a.list-link(href="http://www.linkedin.com/in/igorzoriy") LinkedIn
+                li
+                    a.list-link(href="https://github.com/igorzoriy") GitHub
                 li
                     a.list-link(href="https://www.facebook.com/igor.zoriy") Facebook
                 li
@@ -33,7 +30,7 @@ html(lang="en")
             ul.list
                 li
                     a.list-link(href="https://github.com/igorzoriy/feed-my-telegram") Feed My Telegram
-                    |&nbsp;-&nbsp;Service for translating updates from RSS/Twitter (TypeScript, Node.js).
+                    |&nbsp;-&nbsp;Service for translating updates from RSS/Twitter/Youtube (TypeScript, Node.js).
                 li
                     a.list-link(href="https://github.com/igorzoriy/learn-words") Learn Words
                     |&nbsp;-&nbsp;WebApp for learning new words (TypeScript, Redux, React, Webpack, Jest).
